# LauraD2PPK

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  applyFormatting.sh  fix-comments.py  fix-comments.sh
Rian/: D2PiPiKFit  D2PiPiKFit.cpp  MarcofitD2PPK.cc  amp_phs_fit_organizer.cpp  compare_plot.cpp  execute_commands.txt  fitD2PKP  fitD2PKP.cc  fit_bash.sh
Rian/Fit_Results_0/: Fit_results_0_.txt  fitDpipiK_0_expt_0-0.root
Rian/Fit_Results_1/: Fit_results_1_.txt  fitDpipiK_1_expt_0-0.root
Rian/Fit_Results_10/: Fit_results_10_.txt  fitDpipiK_10_expt_0-0.root
Rian/Fit_Results_11/: Fit_results_11_.txt  fitDpipiK_11_expt_0-0.root
Rian/Fit_Results_12/: Fit_results_12_.txt  fitDpipiK_12_expt_0-0.root
Rian/Fit_Results_13/: Fit_results_13_.txt  fitDpipiK_13_expt_0-0.root
Rian/Fit_Results_14/: Fit_results_14_.txt  fitDpipiK_14_expt_0-0.root
Rian/Fit_Results_15/: Fit_results_15_.txt  fitDpipiK_15_expt_0-0.root
Rian/Fit_Results_16/: Fit_results_16_.txt  fitDpipiK_16_expt_0-0.root
Rian/Fit_Results_17/: Fit_results_17_.txt  fitDpipiK_17_expt_0-0.root
Rian/Fit_Results_2/: Fit_results_2_.txt  fitDpipiK_2_expt_0-0.root
Rian/Fit_Results_3/: Fit_results_3_.txt  fitDpipiK_3_expt_0-0.root
Rian/Fit_Results_4/: Fit_results_4_.txt  fitDpipiK_4_expt_0-0.root
Rian/Fit_Results_5/: Fit_results_5_.txt  fitDpipiK_5_expt_0-0.root
Rian/Fit_Results_6/: Fit_results_6_.txt  fitDpipiK_6_expt_0-0.root
Rian/Fit_Results_7/: Fit_results_7_.txt  fitDpipiK_7_expt_0-0.root
Rian/Fit_Results_8/: Fit_results_8_.txt  fitDpipiK_8_expt_0-0.root
Rian/Fit_Results_9/: Fit_results_9_.txt  fitDpipiK_9_expt_0-0.root
Rian/data/: HighPurity_signal_m13m23.root  HighPurity_signal_m13m23_v5068.root  HighPurity_signal_m13m23_v5069.root  RemoveEvent.cpp  RenameBranches.cpp  automatic_non_sense.sh  automatic_non_sense_v2.sh  fitDpipiK_0_expt_0-0.root  fitToyMC_0_expt0.root  print_data.cpp  problematic_events.txt
Rian/eff_bkg_files/: BkgWithVeto.root  EffWithVeto.root
cmake/Modules/: LauraCompilerFlags.cmake  LauraExternalDependencies.cmake
cmake/Templates/: LauraConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  README  ReleaseNotes.md  mainpage.dox  mainpage.dox.in  release.notes
examples/: B3piKMatrixMassProj.cc  B3piKMatrixPlots.cc  CMakeLists.txt  CalcChiSq.cc  CalcChiSq.hh  CalcChiSqMain.cc  FlatPhaseSpace-CustomMasses.cc  FlatPhaseSpace.cc  FlatSqDalitz-CustomMasses.cc  FlatSqDalitz.cc  GenFit3K.cc  GenFit3KS.cc  GenFit3pi.cc  GenFit3pi.py  GenFit3pi.py.in  GenFitBelleCPKpipi.cc  GenFitDpipi.cc  GenFitDs2KKpi.cc  GenFitEFKLLM.cc  GenFitKpipi.cc  GenFitNoDP.cc  GenFitNoDPMultiDim.cc  KMatrixDto3pi.cc  KMatrixExample.cc  Makefile  Master.cc  MergeDataFiles.cc  MergeDataFiles.hh  MergeDataFilesMain.cc  PlotKMatrixTAmp.cc  PlotLikelihood.cc  PlotResults.cc  QuasiFlatSqDalitz-CustomMasses.cc  QuasiFlatSqDalitz.cc  ResultsExtractor.cc  ResultsExtractor.hh  ResultsExtractorMain.cc  SimFitCoordinator.cc  SimFitTask.cc  SimFitTaskRooFit.cc  (+13 more)
inc/: CMakeLists.txt  Lau1DCubicSpline.hh  Lau1DHistPdf.hh  Lau2DAbsDP.hh  Lau2DAbsDPPdf.hh  Lau2DAbsHistDP.hh  Lau2DAbsHistDPPdf.hh  Lau2DCubicSpline.hh  Lau2DHistDP.hh  Lau2DHistDPPdf.hh  Lau2DHistPdf.hh  Lau2DSplineDP.hh  Lau2DSplineDPPdf.hh  LauASqMaxFinder.hh  LauAbsBkgndDPModel.hh  LauAbsCoeffSet.hh  LauAbsDPDynamics.hh  LauAbsEffModel.hh  LauAbsFitModel.hh  LauAbsFitter.hh  LauAbsIncohRes.hh  LauAbsModIndPartWave.hh  LauAbsPdf.hh  LauAbsRValue.hh  LauAbsResonance.hh  LauArgusPdf.hh  LauAsymmCalc.hh  LauBelleCPCoeffSet.hh  LauBelleNR.hh  LauBelleSymNR.hh  LauBifurcatedGaussPdf.hh  LauBkgndDPModel.hh  LauBlattWeisskopfFactor.hh  LauBlind.hh  LauBreitWignerRes.hh  LauCPFitModel.hh  LauCacheData.hh  LauCalcChiSq.hh  LauCartesianCPCoeffSet.hh  LauCartesianGammaCPCoeffSet.hh  (+91 more)
macros/: makeFitFile.C  plotComplexVars.C  plotCorrs.C  plotCorrsFromToy.C  plotDataIsobars.C
src/: CMakeLists.txt  Lau1DCubicSpline.cc  Lau1DHistPdf.cc  Lau2DAbsHistDP.cc  Lau2DAbsHistDPPdf.cc  Lau2DCubicSpline.cc  Lau2DHistDP.cc  Lau2DHistDPPdf.cc  Lau2DHistPdf.cc  Lau2DSplineDP.cc  Lau2DSplineDPPdf.cc  LauASqMaxFinder.cc  LauAbsBkgndDPModel.cc  LauAbsCoeffSet.cc  LauAbsDPDynamics.cc  LauAbsFitModel.cc  LauAbsIncohRes.cc  LauAbsModIndPartWave.cc  LauAbsPdf.cc  LauAbsResonance.cc  LauArgusPdf.cc  LauAsymmCalc.cc  LauBelleCPCoeffSet.cc  LauBelleNR.cc  LauBelleSymNR.cc  LauBifurcatedGaussPdf.cc  LauBkgndDPModel.cc  LauBlattWeisskopfFactor.cc  LauBlind.cc  LauBreitWignerRes.cc  LauCPFitModel.cc  LauCacheData.cc  LauCalcChiSq.cc  LauCartesianCPCoeffSet.cc  LauCartesianGammaCPCoeffSet.cc  LauChebychevPdf.cc  LauCleoCPCoeffSet.cc  LauComplex.cc  LauCruijffPdf.cc  LauCrystalBallPdf.cc  (+83 more)
test/: CMakeLists.txt  Makefile  TestCovariant.cc  TestCovariant2.cc  TestNewKinematicsMethods.cc
